# array-struct

./: Cargo.toml  README.md
.github/workflows/: ci.yml
no_std/: Cargo.toml
no_std/src/: main.rs
src/: lib.rs
tests/: base.rs  try.rs  try_res.rs
